--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <section id="about" class="py-24 sm:py-32 bg-white">
         <div class="max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8 grid md:grid-cols-12 gap-12 items-center">
              <div class="md:col-span-5" data-aos="fade-right">
-                <img src="https://lh3.googleusercontent.com/gg-dl/AJfQ9KSNuesYW2xs5w0Lf2hALF0i5mJMtnwCNaVVnxAISrBwYqF-Hz_oDuqHfX-lEBUoCpYLUAld0zR_ewsH7qk3EvZKNqNnUyBChl4OBqYe2sINWLC4679nOHM7SzrQ6nuZIoMtcvGhsuIESFLoQgDmR7se5pDLzjguAn6sszK2mwgGoh5l=s1024?authuser=1" alt="Jessica Sterling" class="w-full h-auto object-cover">
+                <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=2864&auto=format&fit=crop" alt="Jessica Sterling" class="w-full h-auto object-cover">
             </div>
             <div class="md:col-span-7" data-aos="fade-left" data-aos-delay="100">
                  <h2 class="text-3xl lg:text-4xl font-semibold mb-6 text-gray-900">A Passion for People, a<br> Dedication to <span class="accent-olive">Results</span></h2>
